app/src/main/java/com/example/desafio/domain/commons/errors/Cancelled.kt
package com.example.desafio.domain.commons.errors

class Cancelled : Exception() {
}